Enable netty optimization and BK native IO on jdk17